[package]
name = "liquorice"
version = "0.1.0"
authors = ["printfn <printfn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.24.1" }
juniper = { git = "https://github.com/graphql-rust/juniper" }
hyper = "0.13"
juniper_hyper = { git = "https://github.com/graphql-rust/juniper" }
futures = "0.3.1"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
base64 = "0.13.0"
anyhow = "1.0.34"

[features]
bundled = ["rusqlite/bundled"]
