[package]
name = "liquorice"
version = "0.1.0"
authors = ["printfn <printfn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.24.2"
juniper = "0.15.1"
hyper = "0.13.9"
juniper_hyper = "0.6.0"
futures = "0.3.8"
tokio = { version = "0.2.24", features = ["macros", "rt-threaded"] }
base64 = "0.13.0"
anyhow = "1.0.37"

[features]
bundled = ["rusqlite/bundled"]
